--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -11,6 +11,7 @@ block.2515 = minecraft:lime_concrete
 block.25110 = minecraft:purple_concrete
 block.25114 = minecraft:red_concrete
 block.463 = minecraft:lantern
+block.464 = minecraft:campfire
 block.485 = minecraft:shroomlight
 block.544 = minecraft:crying_obsidian
 block.724 = minecraft:pearlescent_froglight
